add a product sectionm

--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
     <!-- -------------------------Main page with image sliders -->
     <div class="slide-container">
         <div class="slider">
-            <div class="slide active" style="background: url(image/2.png);"></div>
-            <div class="slide"style="background:url(image/3.png);"></div>
-            <div class="slide"style="background:url(image/4.png);"></div>
-            
+            <div class="slide active">
+                <img src="image/2.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="image/4.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="image/5.png" alt="">
+            </div>
+
         </div>
         <div class="controls">
             <div class="prev">
@@ -46,7 +52,31 @@
             <div class="next">
                 <i class="fa-solid fa-greater-than"></i>
             </div>
+        </div>
     </div>
+    <!-- -------- to add a main body -->
+   <div class="head">
+    <h2>our products</h2>
+   </div>
+   <div class="contains">
+        <div class="circle zoom">ladies</div>
+        <div class="circle zoom">gents</div>
+        <div class="circle zoom">kids</div>
+        <div class="circle zoom">schools</div>
+        <div class="circle zoom">snakkers</div>
+   </div>
+   <div class="products">
+    <div class="items"></div>
+    <div class="items"></div>
+    <div class="items"></div>
+    <div class="items"></div>
+    <div class="items"></div>
+    <div class="items"></div>
+    <div class="items"></div>
+    <div class="items"></div>
+    <div class="items"></div>
+    <div class="items"></div>
+   </div>
     <!-- --------------------------To attached external javascript file -->
     <script src="script.js"></script>
 </body>
