--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="">home</a></li>
-                <li><a href="">products</a></li>
-                <li><a href="">gallery</a></li>
-                <li><a href="">about us</a></li>
-                <li><a href="">contact us</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="products.html">products</a></li>
+                <li><a href="#">gallery</a></li>
+                <li><a href="#">about us</a></li>
+                <li><a href="#">contact us</a></li>
             </ul>
         </div>
     </header>
