--- a/index.html
+++ b/index.html
@@ -55,28 +55,70 @@
         </div>
     </div>
     <!-- -------- to add a main body -->
-   <div class="head">
-    <h2>our products</h2>
-   </div>
-   <div class="contains">
+    <div class="head">
+        <h2>our products</h2>
+    </div>
+    <div class="contains">
         <div class="circle zoom">ladies</div>
         <div class="circle zoom">gents</div>
         <div class="circle zoom">kids</div>
         <div class="circle zoom">schools</div>
         <div class="circle zoom">snakkers</div>
-   </div>
-   <div class="products">
-    <div class="items"></div>
-    <div class="items"></div>
-    <div class="items"></div>
-    <div class="items"></div>
-    <div class="items"></div>
-    <div class="items"></div>
-    <div class="items"></div>
-    <div class="items"></div>
-    <div class="items"></div>
-    <div class="items"></div>
-   </div>
+    </div>
+    <div class="products">
+        <div class="items"></div>
+        <div class="items"></div>
+        <div class="items"></div>
+        <div class="items"></div>
+        <div class="items"></div>
+        <div class="items"></div>
+        <div class="items"></div>
+        <div class="items"></div>
+        <div class="items"></div>
+        <div class="items"></div>
+    </div>
+    <!-- ----------------------add a footer ------------------------ -->
+    <footer>
+        <div class="foot">
+            <div class="product">
+
+                <ul>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="products.html">products</a></li>
+                    <li><a href="#">gallery</a></li>
+                    <li><a href="#">about us</a></li>
+                    <li><a href="#">contact us</a></li>
+                </ul>
+            </div>
+            <div class="addr">
+                <h3>address</h3>
+                <p>bihar india</p>
+
+
+            </div>
+            <div class="con">
+                <h3>contact us</h3>
+                <h5>Email:</h5>
+                <p>website@gmail.com</p>
+                <h5>Number:</h5>
+                <p>11111 00000</p>
+
+            </div>
+            <div class="about">
+                <h3>about us</h3>
+                <p>satisfaction</p>
+                <p>services</p>
+
+
+            </div>
+        </div>
+        <div class="icon">
+            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-facebook"></i>
+        </div>
+    </footer>
     <!-- --------------------------To attached external javascript file -->
     <script src="script.js"></script>
 </body>
