--- a/products.html
+++ b/products.html
@@ -136,8 +136,50 @@
     </div>
 
 </div>
+<footer>
+    <div class="foot">
+        <div class="product">
 
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="products.html">products</a></li>
+                <li><a href="#">gallery</a></li>
+                <li><a href="#">about us</a></li>
+                <li><a href="#">contact us</a></li>
+            </ul>
+        </div>
+        <div class="addr">
+            <h3>address</h3>
+            <p>bihar india</p>
+
+
+        </div>
+        <div class="con">
+            <h3>contact us</h3>
+            <h5>Email:</h5>
+            <p>website@gmail.com</p>
+            <h5>Number:</h5>
+            <p>11111 00000</p>
+
+        </div>
+        <div class="about">
+            <h3>about us</h3>
+            <p>satisfaction</p>
+            <p>services</p>
+
+
+        </div>
+    </div>
+    <div class="icon">
+        <i class="fa-brands fa-whatsapp"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-facebook"></i>
+    </div>
+</footer>
+<!-- ------add a external files------------ -->
     <script src="script.js"></script>
 </body>
+
 
 </html>
