--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="products.html">products</a></li>
                 <li><a href="#">gallery</a></li>
                 <li><a href="#">about us</a></li>
-                <li><a href="#">contact us</a></li>
+                <li><a href="form.html">contact us</a></li>
             </ul>
         </div>
     </header>
