--- a/products.html
+++ b/products.html
@@ -26,10 +26,10 @@
         <div class="menu">
             <ul>
                 <li><a href="index.html">home</a></li>
-                <li><a href="">products</a></li>
-                <li><a href="">gallery</a></li>
-                <li><a href="">about us</a></li>
-                <li><a href="">contact us</a></li>
+                <li><a href="products.html">products</a></li>
+                <li><a href="#">gallery</a></li>
+                <li><a href="#">about us</a></li>
+                <li><a href="form.html">contact us</a></li>
             </ul>
         </div>
     </header>
