add a photo to main

--- a/index.html
+++ b/index.html
@@ -59,23 +59,53 @@
         <h2>our products</h2>
     </div>
     <div class="contains">
-        <div class="circle zoom">ladies</div>
-        <div class="circle zoom">gents</div>
-        <div class="circle zoom">kids</div>
-        <div class="circle zoom">schools</div>
-        <div class="circle zoom">snakkers</div>
+        <div class="circle zoom">
+            <img src="image/4.png" alt="">
+        </div>
+        <div class="circle zoom">
+             <img src="image/16.png" alt="">
+        </div>
+        <div class="circle zoom">
+             <img src="image/17.png" alt="">
+        </div>
+        <div class="circle zoom">
+             <img src="image/18.png" alt="">
+        </div>
+        <div class="circle zoom">
+             <img src="image/19.png" alt="">
+        </div>
     </div>
     <div class="products">
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
+        <div class="items">
+            <img src="image/6.png" alt="">
+        </div>
+        <div class="items">
+            <img src="image/7.png" alt="">
+        </div>
+        <div class="items">
+            <img src="image/8.png" alt="">
+        </div>
+        <div class="items">
+            <img src="image/9.png" alt="">
+        </div>
+        <div class="items">
+            <img src="image/10.png" alt="">
+        </div>
+        <div class="items">
+            <img src="image/11.png" alt="">
+        </div>
+        <div class="items">
+            <img src="image/12.png" alt="">
+        </div>
+        <div class="items">
+            <img src="image/13.png" alt="">
+        </div>
+        <div class="items">
+            <img src="image/14.png" alt="">
+        </div>
+        <div class="items">
+            <img src="image/15.png" alt="">
+        </div>
     </div>
     <!-- ----------------------add a footer ------------------------ -->
     <footer>
