add gallery file

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <ul>
                 <li><a href="index.html">home</a></li>
                 <li><a href="products.html">products</a></li>
-                <li><a href="#">gallery</a></li>
-                <li><a href="#">about us</a></li>
+                <li><a href="gallery.html">gallery</a></li>
+                <!-- <li><a href="#">about us</a></li> -->
                 <li><a href="form.html">contact us</a></li>
             </ul>
         </div>
@@ -60,7 +60,7 @@
     <div class="contains">
         <div class="circle zoom">
             <img src="image/4.png" alt="">
-            <button type="button" onclick="show()"></button>
+            
         </div>
         <div class="circle zoom">
             <img src="image/16.png" alt="">
