--- a/products.html
+++ b/products.html
@@ -27,8 +27,8 @@
             <ul>
                 <li><a href="index.html">home</a></li>
                 <li><a href="products.html">products</a></li>
-                <li><a href="#">gallery</a></li>
-                <li><a href="#">about us</a></li>
+                <li><a href="gallery.html">gallery</a></li>
+                <!-- <li><a href="#">about us</a></li> -->
                 <li><a href="form.html">contact us</a></li>
             </ul>
         </div>
